--- a/app/config/app.config.json
+++ b/app/config/app.config.json
@@ -1,5 +1,5 @@
 {
     "concepts": ["array","string","hash-table","dynamic-programming","math","depth-first-search","sorting","greedy","breadth-first-search","tree","binary-search","matrix","binary-tree","two-pointers","bit-manipulation","stack","heap-priority-queue","graph"],
     "difficulty": ["Easy", "Medium"],
-    "DL":["sriramvenkat98@gmail.com"]
+    "DL":"sriramvenkat98@gmail.com"
 }
