--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "mysql": "^2.18.1",
+    "nodemailer": "^6.7.3",
     "read-excel-file": "^5.2.28"
   }
 }
