--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.1",
     "mysql": "^2.18.1",
+    "node-cron": "^3.0.1",
     "nodemailer": "^6.7.3",
-    "read-excel-file": "^5.2.28"
+    "read-excel-file": "^5.2.28",
+    "uuid": "^8.3.2"
   }
 }
