--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,12 +9,18 @@ services:
       - MYSQL_DATABASE=$DATABASE
     ports:
       - $DB_LOCAL_PORT:$DB_DOCKER_PORT
+    healthcheck:
+      test: ["CMD", "mysql", "-uroot", "-p$DB_ROOT_PASSWORD", "-e", "USE $DATABASE;"]
+      timeout: 30s
+      retries: 5
+      start_period: 30s
     volumes:
       - db:/var/lib/mysql
   
   app:
     depends_on:
-      - mysqldb
+      mysqldb:
+        condition: service_healthy
     build: ./
     restart: unless-stopped
     env_file: ./.env
